// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndexedFieldsTable IndexedFieldsTable with rollup index pattern should render normally 1`] = `
Object {
  "items": Array [
    Object {
      "displayName": "Elastic",
      "esTypes": Array [
        "keyword",
      ],
      "excluded": false,
      "format": "",
      "hasRuntime": false,
      "id": "Elastic",
      "info": Array [
        "Rollup aggregations:",
        "terms",
      ],
      "isMapped": false,
      "isUserEditable": false,
      "kbnType": undefined,
      "name": "Elastic",
      "searchable": true,
      "type": "keyword",
    },
    Object {
      "displayName": "timestamp",
      "esTypes": Array [
        "date",
      ],
      "excluded": false,
      "format": "",
      "hasRuntime": false,
      "id": "timestamp",
      "info": Array [
        "Rollup aggregations:",
        "date_histogram (interval: 30s, delay: 30s, UTC)",
      ],
      "isMapped": false,
      "isUserEditable": false,
      "kbnType": undefined,
      "name": "timestamp",
      "type": "date",
    },
    Object {
      "displayName": "conflictingField",
      "esTypes": Array [
        "keyword",
        "long",
      ],
      "excluded": false,
      "format": "",
      "hasRuntime": false,
      "id": "conflictingField",
      "info": Array [],
      "isMapped": false,
      "isUserEditable": false,
      "kbnType": undefined,
      "name": "conflictingField",
      "type": "keyword, long",
    },
    Object {
      "displayName": "amount",
      "esTypes": Array [
        "long",
      ],
      "excluded": false,
      "format": "",
      "hasRuntime": false,
      "id": "amount",
      "info": Array [
        "Rollup aggregations:",
        "histogram (interval: 5)",
        "avg",
        "max",
        "min",
        "sum",
        "value_count",
      ],
      "isMapped": false,
      "isUserEditable": false,
      "kbnType": undefined,
      "name": "amount",
      "type": "long",
    },
    Object {
      "displayName": "runtime",
      "esTypes": Array [
        "long",
      ],
      "excluded": false,
      "format": "",
      "hasRuntime": true,
      "id": "runtime",
      "info": Array [],
      "isMapped": false,
      "isUserEditable": false,
      "kbnType": "number",
      "name": "runtime",
      "runtimeField": Object {
        "script": Object {
          "source": "emit('Hello');",
        },
        "type": "long",
      },
      "type": "long",
    },
  ],
}
`;

exports[`IndexedFieldsTable should filter based on the query bar 1`] = `
Object {
  "items": Array [
    Object {
      "displayName": "Elastic",
      "esTypes": Array [
        "keyword",
      ],
      "excluded": false,
      "format": "",
      "hasRuntime": false,
      "id": "Elastic",
      "info": Array [],
      "isMapped": false,
      "isUserEditable": false,
      "kbnType": undefined,
      "name": "Elastic",
      "searchable": true,
      "type": "keyword",
    },
  ],
}
`;

exports[`IndexedFieldsTable should filter based on the schema filter 1`] = `
Object {
  "items": Array [
    Object {
      "displayName": "runtime",
      "esTypes": Array [
        "long",
      ],
      "excluded": false,
      "format": "",
      "hasRuntime": true,
      "id": "runtime",
      "info": Array [],
      "isMapped": false,
      "isUserEditable": false,
      "kbnType": "number",
      "name": "runtime",
      "runtimeField": Object {
        "script": Object {
          "source": "emit('Hello');",
        },
        "type": "long",
      },
      "type": "long",
    },
  ],
}
`;

exports[`IndexedFieldsTable should filter based on the type filter 1`] = `
Object {
  "items": Array [
    Object {
      "displayName": "timestamp",
      "esTypes": Array [
        "date",
      ],
      "excluded": false,
      "format": "",
      "hasRuntime": false,
      "id": "timestamp",
      "info": Array [],
      "isMapped": false,
      "isUserEditable": false,
      "kbnType": undefined,
      "name": "timestamp",
      "type": "date",
    },
  ],
}
`;

exports[`IndexedFieldsTable should render normally 1`] = `
Object {
  "items": Array [
    Object {
      "displayName": "Elastic",
      "esTypes": Array [
        "keyword",
      ],
      "excluded": false,
      "format": "",
      "hasRuntime": false,
      "id": "Elastic",
      "info": Array [],
      "isMapped": false,
      "isUserEditable": false,
      "kbnType": undefined,
      "name": "Elastic",
      "searchable": true,
      "type": "keyword",
    },
    Object {
      "displayName": "timestamp",
      "esTypes": Array [
        "date",
      ],
      "excluded": false,
      "format": "",
      "hasRuntime": false,
      "id": "timestamp",
      "info": Array [],
      "isMapped": false,
      "isUserEditable": false,
      "kbnType": undefined,
      "name": "timestamp",
      "type": "date",
    },
    Object {
      "displayName": "conflictingField",
      "esTypes": Array [
        "keyword",
        "long",
      ],
      "excluded": false,
      "format": "",
      "hasRuntime": false,
      "id": "conflictingField",
      "info": Array [],
      "isMapped": false,
      "isUserEditable": false,
      "kbnType": undefined,
      "name": "conflictingField",
      "type": "keyword, long",
    },
    Object {
      "displayName": "amount",
      "esTypes": Array [
        "long",
      ],
      "excluded": false,
      "format": "",
      "hasRuntime": false,
      "id": "amount",
      "info": Array [],
      "isMapped": false,
      "isUserEditable": false,
      "kbnType": undefined,
      "name": "amount",
      "type": "long",
    },
    Object {
      "displayName": "runtime",
      "esTypes": Array [
        "long",
      ],
      "excluded": false,
      "format": "",
      "hasRuntime": true,
      "id": "runtime",
      "info": Array [],
      "isMapped": false,
      "isUserEditable": false,
      "kbnType": "number",
      "name": "runtime",
      "runtimeField": Object {
        "script": Object {
          "source": "emit('Hello');",
        },
        "type": "long",
      },
      "type": "long",
    },
  ],
}
`;
